# mngdx

./: .gitignore  Cargo.toml  README.md  clippy.toml
src/: .main.rs.swp  consts.rs  main.rs
src/api/: .cache.rs.swp  .mod.rs.swp  .request.rs.swp  cache.rs  lang_codes.rs  mod.rs  request.rs  structs.rs
src/api/structs/: .json.rs.swp  .lang_codes.rs.swp  .mod.rs.swp  json.rs  lang_codes.rs  mod.rs
src/app/: events.rs  mod.rs  reader.rs  render.rs  state.rs  time.rs
src/images/: mod.rs
