[package]
name = "tk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
log = "0.4"
pretty_env_logger = "0.4.0"
image = "0.24.0"
mktemp = "0.4.1"
viuer = "0.6"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full", "macros"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
