[package]
name = "tk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"

log = "0.4"
pretty_env_logger = "0.4.0"

image = "0.24.0"

reqwest = { version = "0.11", features = ["json"] }

tokio = { version = "1", features = ["full", "macros"] }
tokio-stream = "0.1"

serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

uuid = { version = "0.8", features = ["serde", "v4"] }

enquote = "1.1.0"

tui = "0.17"
crossterm = "0.22"

anyhow = "1.0"
base64 = "0.13"
tempfile = { version = "3.3.0", optional = true }

libc = "0.2"

[features]
default = ["use_tempfiles"]
use_tempfiles = ["tempfile"]
